--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -5,78 +5,77 @@
   <title>🖥️ S Systèmes Télécom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap (optional) -->
+  <!-- Bootstrap (for accordion) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Retro Pixel Font -->
+  <!-- Retro Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     body.menu-open {
-  background-color: #525252;
-  color: #f6d4b1;
-}
+      background-color: #525252;
+      color: #f6d4b1;
+    }
 
-#sidebar {
-  position: fixed;
-  top: 0;
-  left: -100vw;
-  height: 100vh;
-  width: 100vw;
-  background-color: #525252;
-  color: #f6d4b1;
-  transition: left 0.3s ease;
-  z-index: 9999;
-  font-family: 'Press Start 2P', monospace;
-  padding: 70px 20px 20px 20px;
-}
+    #sidebar {
+      position: fixed;
+      top: 0;
+      left: -100vw;
+      height: 100vh;
+      width: 100vw;
+      background-color: #525252;
+      color: #f6d4b1;
+      transition: left 0.3s ease;
+      z-index: 9999;
+      font-family: 'Press Start 2P', monospace;
+      padding: 70px 20px 20px 20px;
+    }
 
-#sidebarToggle {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 1100;
-  background-color: #525252;
-  color: #f6d4b1;
-  border: none;
-  padding: 6px 20px;
-  cursor: pointer;
-  border-radius: 0;
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
-}
+    #sidebarToggle {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 1100;
+      background-color: #525252;
+      color: #f6d4b1;
+      border: none;
+      padding: 6px 20px;
+      cursor: pointer;
+      border-radius: 0;
+      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+    }
 
-#sidebarToggle svg rect {
-  height: 6px;
-  fill: #f6d4b1;
-}
+    #sidebarToggle svg rect {
+      height: 6px;
+      fill: #f6d4b1;
+    }
 
-#closeSidebar {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background: transparent;
-  border: none;
-  font-size: 24px;
-  color: #f6d4b1;
-  cursor: pointer;
-}
+    #closeSidebar {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: transparent;
+      border: none;
+      font-size: 24px;
+      color: #f6d4b1;
+      cursor: pointer;
+    }
 
-#sidebar a {
-  display: block;
-  margin: 15px 0;
-  padding: 12px;
-  color: #f6d4b1;
-  text-align: center;
-  font-size: 20px;
-  text-decoration: none;
-}
+    #sidebar a {
+      display: block;
+      margin: 15px 0;
+      padding: 12px;
+      color: #f6d4b1;
+      text-align: center;
+      font-size: 20px;
+      text-decoration: none;
+    }
 
-#sidebar a:hover {
-  background-color: #444;
-  transform: translateY(-2px);
-}
-
+    #sidebar a:hover {
+      background-color: #444;
+      transform: translateY(-2px);
+    }
 
     body {
       font-family: 'Inter', sans-serif;
@@ -100,49 +99,62 @@
       margin-bottom: 20px;
     }
 
-    .module-list {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-bottom: 40px;
-    }
-
-    .module-item {
+    .accordion-button {
+      font-family: 'Press Start 2P', monospace;
       background-color: #f6d4b1;
       color: #525252;
       border: 3px solid #525252;
-      padding: 18px;
-      text-align: center;
-      font-family: 'Press Start 2P', monospace;
-      text-decoration: none;
       font-size: 12px;
-      border-radius: 8px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      transition: transform 0.2s ease, box-shadow 0.3s ease;
+      padding: 18px;
     }
 
-    .module-item:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+    .accordion-button:not(.collapsed) {
+      background-color: #e5c9a4;
     }
 
-    .back-button {
-      background-color: #f6d4b1;
-      color: #525252;
-      border: 2px solid #525252;
-      font-family: 'Press Start 2P', monospace;
-      font-size: 10px;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 6px;
-      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
-      display: inline-block;
+.accordion-body a {
+  display: block;
+  padding: 6px 0;
+  color: #f6d4b1;
+  font-size: 12px;
+  text-decoration: none;
+  font-family: 'Press Start 2P', monospace;
+  letter-spacing: 1px;
+}
+
+
+    .accordion-item {
+      border: none;
+      margin-bottom: 20px;
+      background-color: #383838;
+      border-radius: 10px;
     }
 
-    .back-button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 18px rgba(0, 0, 0, 0.5);
+    .accordion-body {
+      background-color: #383838;
     }
+
+.back-button {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #f6d4b1;
+  color: #1a1a1a;
+  border: 2px solid #1a1a1a;
+  font-family: 'Press Start 2P', monospace;
+  font-size: 10px;
+  padding: 10px 14px;
+  text-decoration: none;
+  border-radius: 6px;
+  box-shadow: 2px 2px 0 #1a1a1a;
+  z-index: 1000;
+  transition: transform 0.2s ease;
+}
+
+.back-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 8px #f6d4b1;
+}
 
     .container {
       max-width: 700px;
@@ -151,7 +163,8 @@
   </style>
 </head>
 <body>
-  <!-- Sidebar Toggle Button -->
+
+<!-- Sidebar Toggle -->
 <button id="sidebarToggle" aria-label="Toggle menu">
   <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect y="0" width="36" height="6"/>
@@ -160,7 +173,7 @@
   </svg>
 </button>
 
-<!-- Sidebar Content -->
+<!-- Sidebar -->
 <div id="sidebar">
   <h4>MENU</h4>
   <button id="closeSidebar" aria-label="Close menu">✖</button>
@@ -171,24 +184,135 @@
   <a href="/#contact">Contacts</a>
 </div>
 
-  <div class="container text-center">
-    <h1>RT - Réseaux et Télécommunication</h1>
-    <p class="lead">Wch tsh9 l3ziz</p>
+<div class="container text-center">
+  <h1>RT - Réseaux et Télécommunication</h1>
+  <p class="lead">Wch tsh9 l3ziz</p>
 
-    <div class="module-list">
-      <a href="#" class="module-item">Communication numérique avancée</a>
-      <a href="#" class="module-item">Routage IP</a>
-      <a href="#" class="module-item">Traitement de signal avancé</a>
-      <a href="#" class="module-item">Systéme linux</a>
-      <a href="#" class="module-item">Normes et protocoles</a>
-      <a href="#" class="module-item">Python Oritenté objets</a>
-      <a href="#" class="module-item">Anglais technique et terminologie</a>
-      <a href="#" class="module-item">Traveaux pratiques</a>
+  <div class="accordion" id="modulesAccordion">
+
+    <!-- List of modules -->
+    <!-- Helper function: repeat for each module with unique IDs -->
+
+    <!-- Sample loop -->
+    <!-- We'll number them to avoid ID conflict -->
+
+    <!-- Module Template -->
+    <!-- Copy this for each module with different name + id -->
+    <!-- Replace Cours N as needed -->
+
+    <!-- Module 1 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading1">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+          Communication numérique avancée
+        </button>
+      </h2>
+      <div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+          <a href="#">Cours 2</a>
+        </div>
+      </div>
     </div>
 
-    <a href="../../index.html" class="back-button"> back to home</a>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          Routage IP
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading3">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+          Traitement de signal avancé
+        </button>
+      </h2>
+      <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading4">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+          Systéme linux
+        </button>
+      </h2>
+      <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading5">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5">
+          Normes et protocoles
+        </button>
+      </h2>
+      <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading6">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6">
+          Python orienté objets
+        </button>
+      </h2>
+      <div id="collapse6" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading7">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7">
+          Anglais technique et terminologie
+        </button>
+      </h2>
+      <div id="collapse7" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading8">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8">
+          Travaux pratiques
+        </button>
+      </h2>
+      <div id="collapse8" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">TP 1</a>
+          <a href="#">TP 2</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <script>
+
+  <br>
+  <a href="../../index.html" class="back-button">back to home</a>
+</div>
+
+<script>
   const toggleButton = document.getElementById("sidebarToggle");
   const sidebar = document.getElementById("sidebar");
   const closeBtn = document.getElementById("closeSidebar");
@@ -214,6 +338,9 @@
     }
   });
 </script>
+
+<!-- Bootstrap JS (for accordion) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
