--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -153,8 +153,9 @@
 
 .back-button:hover {
   transform: scale(1.05);
-  box-shadow: 0 0 8px #f6d4b1;
+  box-shadow: 2px 2px 0 #1a1a1a;
 }
+
 
     .container {
       max-width: 700px;
@@ -215,6 +216,42 @@
       </div>
     </div>
 
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          Routage IP
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          Routage IP
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="heading2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          Routage IP
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
+        <div class="accordion-body">
+          <a href="#">Cours 1</a>
+        </div>
+      </div>
+    </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading2">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
@@ -307,6 +344,7 @@
       </div>
     </div>
   </div>
+  
 
   <br>
   <a href="../../index.html" class="back-button">back to home</a>
