--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -174,16 +174,16 @@
   </svg>
 </button>
 
-<!-- Sidebar -->
-<div id="sidebar">
-  <h4>MENU</h4>
-  <button id="closeSidebar" aria-label="Close menu">✖</button>
-  <a href="/">Home</a>
-  <a href="/#about">About</a>
-  <a href="/specialties/rt/index.html">RT</a>
-  <a href="/specialties/st/index.html">ST</a>
-  <a href="/#contact">Contacts</a>
-</div>
+ <!-- Sidebar -->
+  <div id="sidebar">
+    <h4>MENU</h4>
+    <button id="closeSidebar" aria-label="Close menu">✖</button>
+    <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="#about"><i class="fas fa-info-circle"></i> About</a>
+    <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
+    <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
+    <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contacts</a>
+  </div>
 
 <div class="container text-center">
   <h1>RT - Réseaux et Télécommunication</h1>
