--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -250,6 +250,8 @@
     </div>
   </div>
 
+  
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -292,18 +294,17 @@
         semesterModal.show();
       });
     });
+  document.getElementById('btnS1').addEventListener('click', () => {
+    if (selectedSpecialty) {
+      window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s1.html`;
+    }
+  });
 
-    document.getElementById('btnS1').addEventListener('click', () => {
-      if (selectedSpecialty) {
-        window.location.href = `specialties/${selectedSpecialty}/s1.html`;
-      }
-    });
-
-    document.getElementById('btnS2').addEventListener('click', () => {
-      if (selectedSpecialty) {
-        window.location.href = `specialties/${selectedSpecialty}/s2.html`;
-      }
-    });
+  document.getElementById('btnS2').addEventListener('click', () => {
+    if (selectedSpecialty) {
+      window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s2.html`;
+    }
+  });
   </script>
 </body>
 </html>
