--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -11,6 +11,9 @@
   <!-- Retro Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
 
   <style>
     body.menu-open {
@@ -186,7 +189,7 @@
   </div>
 
 <div class="container text-center">
-  <h1>RT - Réseaux et Télécommunication</h1>
+  <h1>RT - Réseaux et Télécommunication S1 </h1>
   <p class="lead">Wch tsh9 l3ziz</p>
 
   <div class="accordion" id="modulesAccordion">
@@ -215,7 +218,6 @@
         </div>
       </div>
     </div>
-
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading2">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
@@ -228,43 +230,6 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-          Routage IP
-        </button>
-      </h2>
-      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
-        <div class="accordion-body">
-          <a href="#">Cours 1</a>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-          Routage IP
-        </button>
-      </h2>
-      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
-        <div class="accordion-body">
-          <a href="#">Cours 1</a>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-          Routage IP
-        </button>
-      </h2>
-      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#modulesAccordion">
-        <div class="accordion-body">
-          <a href="#">Cours 1</a>
-        </div>
-      </div>
-    </div>
-
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading3">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
@@ -347,7 +312,26 @@
   
 
   <br>
-  <a href="../../index.html" class="back-button">back to home</a>
+  <a href="../../index.html" class="back-button"><i class="fas fa-home"></i></a>
+<div class="modal fade" id="semesterModal" tabindex="-1" aria-labelledby="semesterModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center" style="background-color: #525252; color: #f6d4b1; font-family: 'Press Start 2P', monospace;">
+        <div class="modal-header border-0">
+          <h5 class="modal-title w-100">Choose Semester</h5>
+        </div>
+        <div class="modal-body">
+          <p>Which semester do you want?</p>
+          <div class="d-flex justify-content-around mt-3">
+            <button class="btn btn-outline-light" id="btnS1">S1</button>
+            <button class="btn btn-outline-light" id="btnS2">S2</button>
+          </div>
+        </div>
+        <div class="modal-footer border-0">
+          <button class="btn btn-link text-light" data-bs-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -379,6 +363,34 @@
 
 <!-- Bootstrap JS (for accordion) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  let selectedSpecialty = '';
+  const semesterModal = new bootstrap.Modal(document.getElementById('semesterModal'));
+
+  document.querySelectorAll('a[data-specialty]').forEach(link => {
+    link.addEventListener('click', function(e) {
+      e.preventDefault();
+      selectedSpecialty = this.getAttribute('data-specialty');
+
+      sidebar.style.left = "-100vw";
+      body.classList.remove("menu-open");
+
+      semesterModal.show();
+    });
+  });
+
+  document.getElementById('btnS1').addEventListener('click', () => {
+    if (selectedSpecialty) {
+      window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s1.html`;
+    }
+  });
+
+  document.getElementById('btnS2').addEventListener('click', () => {
+    if (selectedSpecialty) {
+      window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s2.html`;
+    }
+  });
+</script>
 
 </body>
 </html>
