--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -208,24 +208,26 @@
     <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
     <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="#about"><i class="fas fa-info-circle"></i> About</a>
+    <a href="/pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
     <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
     <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-    <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i> Contacts</a>
+    <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i> You can find me right here ! </a>
   </div>
 
 <!-- Main content -->
 <div class="main-content">
   <h1>CONTACT ME</h1>
   <div class="social-icons">
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=hichemboukerche26@gmail.com" target="_blank">
-  <i class="fas fa-envelope"></i>
+<div class="contact-row">
+  <a href="mailto:hichemboukerche26@gmail.com" aria-label="Send Email">
+    <i class="fas fa-envelope"></i>
+  </a>
+</div>
+
 </a>
     <a href="https://m.me/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
     <a href="https://www.facebook.com/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
   </div>
 </div>
 
