--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -182,10 +182,10 @@
     <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
     <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="#about"><i class="fas fa-info-circle"></i> About</a>
+    <a href="/pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
     <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
     <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-    <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contacts</a>
+    <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
   </div>
 
 <div class="container text-center">
