--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -163,17 +163,15 @@
 <a href="../../index.html" class="back-button"><i class="fas fa-home"></i></a>
 
 <div class="container">
-  <h1>FAQ - Questions Fréquemment Posées</h1>
+  <h1>FAQ - FREQUENTLY ASKED QUESTIONS !</h1>
   <div class="accordion" id="faqAccordion">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-          Comment accéder aux cours ?
         </button>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          Cliquez sur votre spécialité (RT ou ST) dans le menu, choisissez votre semestre, et accédez aux cours correspondants.
         </div>
       </div>
     </div>
@@ -181,12 +179,10 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          Puis-je contribuer au site ?
         </button>
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          Oui, bien sûr ! Contacte-moi via la page de contact si tu veux proposer un cours ou une amélioration.
         </div>
       </div>
     </div>
@@ -194,12 +190,10 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
-          Ce site est-il officiel ?
         </button>
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          Non, c’est un projet personnel créé pour aider les étudiants en télécom à mieux s’organiser.
         </div>
       </div>
     </div>
@@ -207,12 +201,10 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingFour">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
-          Le contenu est-il mis à jour régulièrement ?
         </button>
       </h2>
       <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          J’essaie de le maintenir à jour, mais toute aide est la bienvenue pour enrichir les contenus !
         </div>
       </div>
     </div>
