--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
   <div id="splash-screen">
     <div class="splash-wrapper">
-      <h1>LOADING TELECOM COURSES...</h1>
+      <h1>LOADING...</h1>
       <div class="loading-bar">
         <div class="loading-progress" id="progress-bar"></div>
       </div>
@@ -295,7 +295,7 @@
   <div class="container text-center py-5">
     <h1 class="mb-3">Telecom Courses Portal</h1>
     <div class="announcement-box">
-      Hey el chabiba ! I made this website to make it easier to find Telecom courses. It’s an amateur project, so there are flaws — but I hope it helps.<br>
+      Hey el chabiba ! I made this website to make it easier to find Telecom courses. It’s my first website so it's not perfect — but I hope it helps.<br>
       If you want to contribute or suggest an idea, just <a href="pages/contact/index.html" style="color: #f6d4b1; text-decoration: underline;">contact me here</a>.
     </div>
 
