--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
   <div id="splash-screen">
     <div class="splash-wrapper">
-      <h1>LOADING...</h1>
+      <h1>LOADING TELECOM COURSES...</h1>
       <div class="loading-bar">
         <div class="loading-progress" id="progress-bar"></div>
       </div>
