--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -211,7 +211,7 @@
     <a href="/pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
     <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
     <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-    <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i> You can find me right here ! </a>
+    <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i>Contact me !</a>
   </div>
 
 <!-- Main content -->
