--- a/specialties/st/s2.html
+++ b/specialties/st/s2.html
@@ -185,7 +185,7 @@
 <a href="/pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
     <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
     <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-    <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contacts</a>
+    <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
   </div>
 
 <div class="container text-center">
