--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact</title>
+  <title>Contact chihem</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -23,7 +20,6 @@
       overflow-x: hidden;
     }
 
-    /* CRT VHS Effects */
     body::before, body::after {
       content: "";
       position: fixed;
@@ -194,7 +190,6 @@
 <body>
   <div id="vhs-overlay"></div>
 
-  <!-- Sidebar Toggle -->
   <button id="sidebarToggle" aria-label="Toggle menu">
     <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect y="0" width="36" height="6"/>
@@ -203,7 +198,6 @@
     </svg>
   </button>
 
-  <!-- Sidebar -->
   <div id="sidebar">
     <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
@@ -214,7 +208,6 @@
     <a href="/telecom-courses/pages/contact/index.html"><i class="fas fa-envelope"></i>Contact me !</a>
   </div>
 
-<!-- Main content -->
 <div class="main-content">
   <h1>CONTACT ME</h1>
   <div class="social-icons">
@@ -231,7 +224,6 @@
   </div>
 </div>
 
-  <!-- Modal -->
   <div class="modal fade" id="semesterModal" tabindex="-1" aria-labelledby="semesterModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content text-center" style="background-color: #525252; color: #f6d4b1; font-family: 'Press Start 2P', monospace;">
@@ -254,7 +246,6 @@
 
   
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
@@ -283,7 +274,6 @@
       }
     });
 
-    // Modal logic
     let selectedSpecialty = '';
     const semesterModal = new bootstrap.Modal(document.getElementById('semesterModal'));
 
