--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FAQ - Systèmes Télécom</title>
+  <title>FAQ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -154,7 +154,7 @@
   <h4>MENU</h4>
   <button id="closeSidebar" aria-label="Close menu">✖</button>
   <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-  <a href="#"><i class="fas fa-question-circle"></i> FAQ</a>
+    <a href="pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
   <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
   <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
   <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
