--- a/specialties/st/s1.html
+++ b/specialties/st/s1.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🖥️ S Systèmes Télécom</title>
+  <title>ST S1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap (for accordion) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Retro Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Font Awesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
 
@@ -168,7 +165,6 @@
 </head>
 <body>
 
-<!-- Sidebar Toggle -->
 <button id="sidebarToggle" aria-label="Toggle menu">
   <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect y="0" width="36" height="6"/>
@@ -177,12 +173,11 @@
   </svg>
 </button>
 
- <!-- Sidebar -->
   <div id="sidebar">
     <h4>MENU</h4>
     <button id="closeSidebar" aria-label="Close menu">✖</button>
     <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-<a href="/pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
+    <a href="pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
     <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
     <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
     <a href="/pages/contact/index.html"><i class="fas fa-envelope"></i>Contact me !</a>
@@ -349,7 +344,6 @@
   });
 </script>
 
-<!-- Bootstrap JS (for accordion) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   let selectedSpecialty = '';
