--- a/index.html
+++ b/index.html
@@ -325,10 +325,9 @@
     </div>
   </div>
 
-  <footer>
-    Fiha khir ! <br>
-    &copy; 2025 chihem
-  </footer>
+<footer class="text-center py-3 bg-dark text-light">
+  <small>&copy; 2025 Chihem. All rights reserved.</small>
+</footer>
 
   <div class="modal fade" id="semesterModal" tabindex="-1" aria-labelledby="semesterModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
