--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -275,13 +275,13 @@
 
   document.getElementById('btnS1').addEventListener('click', () => {
     if (selectedSpecialty) {
-      window.location.href = `/specialties/${selectedSpecialty}/s1.html`;
+      window.location.href = `specialties/${selectedSpecialty}/s1.html`;
     }
   });
 
   document.getElementById('btnS2').addEventListener('click', () => {
     if (selectedSpecialty) {
-      window.location.href = `/specialties/${selectedSpecialty}/s2.html`;
+      window.location.href = `specialties/${selectedSpecialty}/s2.html`;
     }
   });
 </script>
