--- a/specialties/rt/s1.html
+++ b/specialties/rt/s1.html
@@ -173,15 +173,16 @@
   </svg>
 </button>
 
-  <div id="sidebar">
-    <h4>MENU</h4>
-    <button id="closeSidebar" aria-label="Close menu">✖</button>
-    <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-    <a href="pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
-    <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
-    <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-    <a href="pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
-  </div>
+<div id="sidebar">
+  <h4>MENU</h4>
+  <button id="closeSidebar" aria-label="Close menu">✖</button>
+  <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
+  <a href="../../pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
+  <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
+  <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
+  <a href="../../pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
+</div>
+
 
 <div class="container text-center">
   <h1>RT - Réseaux et Télécommunication S1 </h1>
