--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -153,11 +153,11 @@
 <div id="sidebar">
   <h4>MENU</h4>
   <button id="closeSidebar" aria-label="Close menu">✖</button>
-  <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-  <a href="../../pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
-  <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
-  <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-  <a href="../../pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
+    <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="index.html"><i class="fas fa-question-circle"></i> FAQ</a>
+    <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
+    <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
+    <a href="../contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
 </div>
 
 
@@ -275,16 +275,17 @@
   });
 
   document.getElementById('btnS1').addEventListener('click', () => {
-    if (selectedSpecialty) {
-      window.location.href = `specialties/${selectedSpecialty}/s1.html`;
-    }
-  });
+  if (selectedSpecialty) {
+    window.location.href = `../../specialties/${selectedSpecialty}/s1.html`;
+  }
+});
 
-  document.getElementById('btnS2').addEventListener('click', () => {
-    if (selectedSpecialty) {
-      window.location.href = `specialties/${selectedSpecialty}/s2.html`;
-    }
-  });
+document.getElementById('btnS2').addEventListener('click', () => {
+  if (selectedSpecialty) {
+    window.location.href = `../../specialties/${selectedSpecialty}/s2.html`;
+  }
+});
+
 </script>
 </body>
 </html>
