--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -242,10 +242,10 @@
   <h4>MENU</h4>
   <button id="closeSidebar" aria-label="Close menu">✖</button>
   <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
-  <a href="../../pages/faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
+  <a href="../faq/index.html"><i class="fas fa-question-circle"></i> FAQ</a>
   <a href="#" data-specialty="rt"><i class="fas fa-network-wired"></i> RT</a>
   <a href="#" data-specialty="st"><i class="fas fa-satellite-dish"></i> ST</a>
-  <a href="../../pages/contact/index.html"><i class="fas fa-envelope"></i> Contact me !</a>
+  <a href="index.html"><i class="fas fa-envelope"></i> Contact me !</a>
 </div>
 
 
@@ -327,7 +327,7 @@
 
     document.getElementById('btnS1').addEventListener('click', () => {
       if (selectedSpecialty) {
-        window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s1.html`;
+      window.location.href = `../../specialties/${selectedSpecialty.toLowerCase()}/s1.html`;
       }
     });
 
