--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Telecom Courses</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -330,7 +331,7 @@
   </main>
 
   <footer class="text-center py-3 bg-dark text-light">
-    <small>&copy; 2025 Chihem. All rights reserved.</small>
+    <small>&copy; 2025 Chihem. Fiha khir !</small>  
   </footer>
 
   <div class="modal fade" id="semesterModal" tabindex="-1" aria-labelledby="semesterModalLabel" aria-hidden="true">
