--- a/specialties/st/s2.html
+++ b/specialties/st/s2.html
@@ -165,7 +165,12 @@
   </style>
 </head>
 <body>
-
+  <script>
+  // Redirect to Coming Soon unless ?admin is in the URL
+  if (!window.location.search.includes("admin")) {
+    window.location.href = "/soon.html";
+  }
+</script>
 <button id="sidebarToggle" aria-label="Toggle menu">
   <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect y="0" width="36" height="6"/>
