--- a/specialties/rt/s2.html
+++ b/specialties/rt/s2.html
@@ -168,7 +168,7 @@
   <script>
   // Redirect to Coming Soon unless ?admin is in the URL
   if (!window.location.search.includes("admin")) {
-    window.location.href = "/soon.html";
+    window.location.href = "../../soon.html"
   }
 </script>
 
