--- a/soon.html
+++ b/soon.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <h1 class="glitch">PAGE NOT READY</h1>
-  <p> Roht(i) b3id! This page is still under construction.<br>Check back soon </p>
+  <p> Roht(i) b3id!.<br>Check back soon </p>
   <a href="index.html">Return to Homepage</a>
 </body>
 </html>
